--- a/lake-tahoe.html
+++ b/lake-tahoe.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>ABW Technologies</title>
+    <title>My Porfolio</title>
     <meta charset="utf-8">
     <meta name="description" content="Hello there! My name is Alan and I'm a Front End Developer. I spend most of my days taking my craft to the next level. I enjoy spending my free time increasing my knowledge of Web Development and building new and challenging projects.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -24,7 +24,7 @@
         <a href="index.html#main-footer"><li class="delayed-fade-in-left delay-4">Contact</li></a>
         <a href="Resources/Resume.pdf" download><li class="delayed-fade-in-left delay-5 resume-download">Resume<i class="fas fa-download" id="resume-download-button"></i></li></a>
       </ul>
-    </nav>
+    </nav>0
     <!-- End of Main Nav -->
 
     <header class="main-header">
@@ -93,9 +93,9 @@
         <div class="main-footer-content">
           <div class="footer-about-me-content">
             <header>
-              <h2>About <span class="uppercase">Alan</span></h2>
+              <h2>About <span class="uppercase">Elias</span></h2>
             </header>
-            <p>Hello there! My name is Alan and I'm a Front End Developer.</p>
+            <p>Hello there! My name is Elias and I'm a Front End Developer.</p>
             <p>I started my journey as a self-taught web developer right out of High School when I first discovered the biggest CMS in the industy, WordPress. Ever since I have fallen in love with web development and spend most of my days taking my craft to the next level.</p>
             <p>Now a days I tend to code all of my projects from scratch in order to deliver a unique experience to every company.</p>
             <p>Like many other people I enjoy spending my free time increasing my knowledge of Web Development and building new and challenging projects.</p>
@@ -139,7 +139,7 @@
           </div><!-- End of Footer Contact -->
         </address>
       </div><!-- End of Main Footer Container -->
-      <p class="wow fade-in-up" data-wow-delay="1s">&copy 2018 Alan Ayala</p>
+      <p class="wow fade-in-up" data-wow-delay="1s">&copy 2022 Elias</p>
     </footer>
     <!-- End of Main Footer -->
 
